# staircase_autonomy

./: .gitignore  CLAUDE.md  LICENSE  README.md  test_include.cpp
docs/: system_overview.md
docs/ros2_nodes/: simple_clutter_segmentation_node.md  staircase_client_node.md  staircase_estimation_robot_node.md  staircase_standalone_detection_node.md  staircase_viz_node.md
realsense_utils/: README.md  align-depth2color.py  capture_ply.py  diagnose_depth_quality.py  orientation_tracker.py  requirements.txt  rs_cpp_exact.py  test_imu.py
staircase_msgs/: CMakeLists.txt  package.xml
staircase_msgs/msg/: SingleStaircaseDetails.msg  StaircaseMeasurement.msg  StaircaseMsg.msg  StaircasesList.msg
staircase_perception/: CMakeLists.txt  package.xml
staircase_perception/config/: standalone_detection_config.yaml  unified_estimation_config.yaml
staircase_perception/include/staircase_perception/core/: multi_stair_manager.hpp  stair_detector.hpp  staircase_model.hpp
staircase_perception/include/staircase_perception/ros2/: simple_clutter_segmentation_node.hpp  staircase_client_node.hpp  staircase_estimation_robot_node.hpp  staircase_standalone_detection_node.hpp
staircase_perception/include/staircase_perception/utils/: stair_utilities.hpp
staircase_perception/include/staircase_perception/utils/line_extraction/: line.hpp  line_extractor.hpp
staircase_perception/launch/: staircase_client_nodes.launch.py  staircase_robot_nodes.launch.py  staircase_standalone_detection_node.launch.py
staircase_perception/scripts/: staircase_marker_publisher.py
staircase_perception/src/core/: multi_robot_manager.cpp  multi_stair_manager.cpp  staircase_model.cpp
staircase_perception/src/ros2/: simple_clutter_segmentation_node.cpp  staircase_client_node.cpp  staircase_estimation_robot_node.cpp  staircase_standalone_detection_node.cpp
staircase_perception/src/utils/line_extraction/: line_extractor.cpp
staircase_perception/staircase_perception/: stair_visualization.py
staircase_perception_standalone/: CMakeLists.txt  README.md
staircase_perception_standalone/config/: standalone_detection_config.yaml
staircase_perception_standalone/include/staircase_perception/core/: stair_detector.hpp
staircase_perception_standalone/include/staircase_perception_standalone/core/: stair_detector.hpp
staircase_perception_standalone/include/staircase_perception_standalone/utils/: config_parser.hpp  stair_utilities.hpp
staircase_perception_standalone/include/staircase_perception_standalone/utils/line_extraction/: line.hpp  line_extractor.hpp
staircase_perception_standalone/python/: CMakeLists.txt  README.md  bindings.cpp  build.bat  build.sh  live_stair_detector.py  run.bat  run.sh  test_detector.py
staircase_perception_standalone/src/core/: stair_detector.cpp  stair_detector.cpp.bak
staircase_perception_standalone/src/utils/: config_parser.cpp
staircase_perception_standalone/src/utils/line_extraction/: line.cpp  line_extractor.cpp
staircase_perception_standalone/tests/: test_detector_only.cpp
staircase_perception_standalone/tools/: debug_lines.cpp  estimate_ground_distance.cpp  inspect_pcd.cpp  pcd_to_ply.cpp  ply_to_pcd_converter.cpp
