<?xml version="1.0"?>
<package format="3">
  <name>staircase_msgs</name>
  <version>0.0.0</version>
  <description>ROS2 Message definitions for staircase package</description>

  <maintainer email="prassi@cmu.edu">Prasanna Sriganesh</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> 

  <!-- For custom messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
