<?xml version="1.0"?>
<package format="3">
  <name>staircase_perception</name>
  <version>0.0.0</version>
  <description>The staircase detection, estimation and segmentation package</description>

  <maintainer email="prassi@cmu.edu">Prasanna Sriganesh</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>geometry_msgs</depend> 
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend> 
  <depend>tf2_geometry_msgs</depend>

  <depend>pcl_conversions</depend> 
  <depend>pcl_ros</depend>

  <depend>staircase_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  

</package>
